turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:12: error: '{' expected but 'case' found.
  	case 0 => gauche();gauche();gauche();gauche();
        ^Turmite:13: error: '}' expected but 'case' found.
    case 1 => avance();
    ^Turmite:14: error: illegal start of definition
    case 2 => gauche();avance();
    ^Turmite:15: error: illegal start of definition
    case 4 => gauche();gauche();avance();
    ^Turmite:16: error: illegal start of definition
    case 8 => droite();avance();
    ^Turmite:18: error: expected class or object definition
  state = rule(state)(x)(2)
  ^Turmite:20: error: eof expected but '}' found.
}
^